// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildList displays a paginator when appropriate 1`] = `
<DocumentFragment>
  <div
    class="childlist"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1hef13s-MuiGrid-root"
      >
        <p
          class="childlist__pagination"
        >
          Showing 1 - 10 of 10000
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1hef13s-MuiGrid-root"
      >
        Pagination
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
      >
         
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto childlist__toggles css-1hef13s-MuiGrid-root"
      >
        <button>
          Show Thumbnails
        </button>
        <button>
          Show Models
        </button>
        <button>
          Show Child Counts
        </button>
      </div>
    </div>
    <ul
      class="childlist__list"
    >
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
      <li>
        Child
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ChildList renders using ajax-loaded object data 1`] = `
<DocumentFragment>
  <div
    class="childlist"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1hef13s-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1hef13s-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
      >
         
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto childlist__toggles css-1hef13s-MuiGrid-root"
      >
        <button>
          Show Thumbnails
        </button>
        <button>
          Show Models
        </button>
        <button>
          Show Child Counts
        </button>
      </div>
    </div>
    <ul
      class="childlist__list"
    >
      <li>
        Child
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ChildList renders using ajax-loaded root data 1`] = `
<DocumentFragment>
  <div
    class="childlist"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-mwb7rv-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1hef13s-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto css-1hef13s-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
      >
         
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-auto childlist__toggles css-1hef13s-MuiGrid-root"
      >
        <button>
          Show Thumbnails
        </button>
        <button>
          Show Models
        </button>
        <button>
          Show Child Counts
        </button>
      </div>
    </div>
    <ul
      class="childlist__list"
    >
      <li>
        Child
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
